manifests/network/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls
  namespace: cilium
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 192.168.10.2
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.ucdialplans.com"
    allowedRoutes: 
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.ucdialplans.com"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: letsencrypt-wildcard-cert
        namespace: cilium
    allowedRoutes: 
      namespaces:
        from: All

# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: kubeapi
#   namespace: cilium
# spec:
#   gatewayClassName: cilium
#   infrastructure:
#     annotations:
#       lbipam.cilium.io/ips: 192.168.10.13
#   listeners:
#   - name: https
#     protocol: TLS
#     port: 443
#     hostname: "kube.ucdialplans.com"
#     tls:
#       mode: Passthrough
#       # certificateRefs:
#       # - kind: Secret
#       #   name: letsencrypt-wildcard-cert
#       #   namespace: cilium
#     allowedRoutes: 
#       namespaces:
#         from: All
